--- a/composer.json
+++ b/composer.json
@@ -11,17 +11,17 @@
   "authors": [
     {
       "name": "LI Mengxiang",
-      "mail": "limengxiang876@gmail.com",
+      "email": "limengxiang876@gmail.com",
       "homepage": "https://github.com/limen"
     }
   ],
   "license": "MIT",
   "require": {
-    "php": ">=5.5",
+    "php": ">=5.4",
     "limen/redmodel": ">=0.1.2"
   },
   "require-dev": {
-    "phpunit/phpunit": "~5.7"
+    "phpunit/phpunit": "~4.8"
   },
   "autoload": {
     "psr-4": {
