--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,7 @@
   ],
   "license": "MIT",
   "require": {
-    "php": ">=5.4",
-    "limen/redmodel": ">=0.1.2"
+    "php": ">=5.4"
   },
   "require-dev": {
     "phpunit/phpunit": "~4.8"
